--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.5.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.0"
